2010-10-01  Robert Hogan  <robert@webkit.org>

Reviewed by Adam Barth.

        [Qt] Fix http/tests/loading/redirect-methods.html

        https://bugs.webkit.org/show_bug.cgi?id=41571

        Unskip http/tests/loading/redirect-methods.html

        * platform/qt/Skipped:
2010-10-01  Robert Hogan  <robert@webkit.org>

        Reviewed by Adam Barth.

        [Qt] Fix http/tests/loading/redirect-methods.html

        Document our redirection behaviour too.

        https://bugs.webkit.org/show_bug.cgi?id=41571

        * platform/network/qt/QNetworkReplyHandler.cpp:
        (WebCore::QNetworkReplyHandler::QNetworkReplyHandler):
        (WebCore::QNetworkReplyHandler::sendResponseIfNeeded):
        * platform/network/qt/QNetworkReplyHandler.h:

Canonical link: https://commits.webkit.org/59534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68906 268f45cc-cd09-0410-ab3c-d52691b4dbfc